--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,9 +8,8 @@ nav:
   - Resume: resume.md
 site_url: https://vanessaeaton-github-io.pages.dev
 theme:
-  name: material
-  palette:
-    scheme: branding
+  name: dracula
+  custom_dir: overrides
   font:
     text: Poppins
 
