--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,8 @@ Markdown==3.9
 MarkupSafe==3.0.3
 mergedeep==1.3.4
 mkdocs==1.6.1
+mkdocs-dracula-theme==1.0.8
 mkdocs-get-deps==0.2.0
-mkdocs-material==9.6.21
-mkdocs-material-extensions==1.3.1
 packaging==25.0
 paginate==0.5.7
 pathspec==0.12.1
