--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,11 @@
 site_name: Vanessa Eaton Personal Site
 nav:
-  - Home: about.md
+  - Home: index.md
   # - Blog: blog.md
-  # - Projects: projects.md
   - About: about.md
   # - Contact: contact.md
   - Resume: resume.md
-site_url: https://vanessaeaton-github-io.pages.dev
+site_url: https://vanessaeaton.tech
 theme:
   name: dracula
   custom_dir: overrides
